fix: 이벤트 등록 예외 응답 정리
변경 내용:
- 이벤트 도메인 예외 메시지 enum을 추가하고 일정 검증 예외 코드를 도메인 전용 코드로 분리
- 빈 ErrorDetail 생성 헬퍼를 추가해 비즈니스 예외 상세 응답을 정리
- 이벤트 컨트롤러 테스트를 실제 API 경로와 ROLE_COMPANY 권한 정책에 맞게 조정
- 브랜드 등록 POST 권한 매칭에서 제외된 정책 변경에 맞춰 컨트롤러 테스트 컨텍스트를 보정

검증:
- ./gradlew test